# TinFit_3

./: .gitignore  api_google_tin.py  api_news.py  api_stats.py  main.py  pyproject.toml  requirements.  requirements.txt
templates/: about.html  contact.html  footer.html  header.html  index.html  news.html  stats.html
