[tool.poetry]
name = "repl_python3_TinFit3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Jinja2 = "^2.11.3"
google-api-python-client = "^2.2.0"
virtualenv = "^20.4.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
